--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,14 +6,15 @@
 */
 @import url('./reset.css');
 @import url('./gallery.css');
+@import url('./form.css');
 
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Montserrat, Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
 
-  color: #242424;
+  color: #2e2f42;
   background-color: rgba(255, 255, 255, 0.87);
 
   font-synthesis: none;
